0.2.0.0
 - use mDNS for device detection
 - Support grouped devices (appear as an extra player)
 - Volume changes are now at device level, unless <volume_on_play> is set to 1
 - Volume changes on the CC are forwarded to LMS, unless device is a group
 - Free device search was missing ;
 - (dev-2): filter volume speed changes
 - (dev-3): reorganize log management
 
0.1.3.1
 - Documentation update on ReplayGain
 
0.1.3.0
 - Backport squeezetiny changes from changes made for squeeze2upnp 0.2.7.0 
 - armv5 build static and dynamic
 - powerpc build
 - ReplayGain available for raw audio only (pcm, aif)
 - add aif as an accepted codec
 - in CastLoad, MediaSession must be reset 
 - ON/OFF fully cleans any pending response as, in some cases, CC does not respond to a STOP
 - Corrected memory leak when no matching codec was found
 
0.1.2.0
 - Always gather metadata from LMS, <send_metadata> only stops sending of coverart, album, artist and title 
 - <send_metadata> was ignored except for 1st track

0.1.1.2
 - When streaming a webradio using wav format, pseudo file size was not set properly
 - MAC address parameter was not read properly in config file (was overflowing on <send_icy> parameter)
 - Add build date/time to version
 

0.1.1.1
 - Buffer overflow was preventing artwork to be sent (potentially overflow on long metadata even w/o artwork)