@@ -39,7 +39,6 @@ void 	CastClean(void *Ctx);
 #define CastPause(Ctx)	CastSimple(Ctx, "PAUSE")
 void 	CastSimple(void *Ctx, char *Type);
 bool	CastLoad(void *Ctx, char *URI, char *ContentType, struct sq_metadata_s *MetaData);
-void 	CastSetVolume(void *p, u8_t Volume);
 void 	CastSetDeviceVolume(void *p, u8_t Volume);
 
 #endif
