@@ -1,7 +1,7 @@
 #ifndef __SQUEEZEDEFS_H
 #define __SQUEEZEDEFS_H
 
-#define VERSION "v0.2.0.0-dev-3"" ("__DATE__" @ "__TIME__")"
+#define VERSION "v0.2.0.0-dev-4"" ("__DATE__" @ "__TIME__")"
 
 #if defined(linux)
 #define LINUX     1
