@@ -131,6 +131,8 @@
 			<option [% IF entry.1 == volume_on_play %]selected[% END %] value="[% entry.1 %]">[% entry.0 %]</option>
 		[% END %]
 		</select>
+		&nbsp&nbsp[% "PLUGIN_CASTBRIDGE_MEDIAVOLUME" | string %]
+		<input type="text" class="stdedit" name="media_volume" id="media_volume" value="[% media_volume %]" size="3">
 	[% END %]
 	
 	[% WRAPPER setting title="PLUGIN_CASTBRIDGE_SENDMETADATA" desc="PLUGIN_CASTBRIDGE_SENDMETADATA_DESC" %]
