@@ -15,7 +15,7 @@ use Slim::Utils::Log;
 my $prefs = preferences('plugin.castbridge');
 my $log   = logger('plugin.castbridge');
 my @xmlmain = qw(upnp_socket scan_interval scan_timeout log_limit);
-my @xmldevice = qw(name mac buffer_dir buffer_limit sample_rate codecs flac_header enabled remove_count send_metadata volume_on_play send_coverart send_icy max_read_wait);
+my @xmldevice = qw(name mac buffer_dir buffer_limit sample_rate codecs flac_header enabled remove_count send_metadata volume_on_play send_coverart send_icy max_read_wait media_volume);
 
 sub name { 'PLUGIN_CASTBRIDGE' }
 
