@@ -276,13 +276,14 @@ PLUGIN_CASTBRIDGE_VOLUMEMGMT
 	
 PLUGIN_CASTBRIDGE_VOLUMEMGMT_DESC
 	EN	Defines how LMS volume commands are sent to player
-	EN	This section also controls how LMS volume commands are sent to player. LMS mute request when pausing can be blocked as well
+	EN	This section also controls how LMS volume commands are sent to player. It is possible to apply a scaling factor (0..100)
+	EN	if default is too loud. It is also possible to prevent LMS from sending volume commands when nothing is being played
 
 PLUGIN_CASTBRIDGE_VOLUMEONPLAY
 	EN	LMS volume changes
-	
-PLUGIN_CASTBRIDGE_PAUSEVOLUME
-	EN	Mute on pause
+
+PLUGIN_CASTBRIDGE_MEDIAVOLUME
+	EN	Scaling factor
 
 PLUGIN_CASTBRIDGE_PLAYERLIST
 	EN	List of players currently in configuration file - Note that more devices might have been discovered
