@@ -6,6 +6,7 @@
  - Free device search was missing ;
  - (dev-2): filter volume speed changes
  - (dev-3): reorganize log management
+ - (dev-4): add volume scaling factor (using media session volume)
  
 0.1.3.1
  - Documentation update on ReplayGain
